--- a/.gitignore/Views/Post/CreatePost.cshtml
+++ b/.gitignore/Views/Post/CreatePost.cshtml
@@ -62,7 +62,27 @@
                     <div class="content-grid">
                         <div class="content-grid-info">
                             <div class="post-info">
+                                <script type="text/javascript">
+                                    function checkForm() {
+                                        var regex = new RegExp("^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.]((19|20)\\d\\d)$");
+                                        var Name = $('#Name').val();
+                                        var Date = $('#Date').val();
+                                        var Content = $('#Content').val();
 
+                                        var submitButton = $('#submitButton');
+
+                                        if ((Name == "") || (Content == "") || (Date == "") || (regex.test(Date) == false)) {
+
+                                            submitButton.prop('disabled', true);
+                                        }
+                                        else {
+                                            submitButton.prop('disabled', false);
+                                        }
+                                    }</script>
+
+                                @Scripts.Render("~/scripts/jquery-3.3.1.min.js")
+                                @Scripts.Render("~/scripts/jquery.validate.min.js")
+                                @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
                                 <blockquote>
                                     <p>
                                         <h2>Добавить запись</h2>
